--- a/anat-lecture-quiz.html
+++ b/anat-lecture-quiz.html
@@ -30,10 +30,10 @@
     window.onload = () => {
         // Define an array of JSON paths you want to load
 const jsonPaths = [
-    '/data/anatomy_quiz_part1.json',
-    '/data/anatomy_quiz_part2.json',
-    '/data/anatomy_quiz_part3.json',
-    '/data/anatomy_quiz_part4.json'
+    'data/anatomy_quiz_part1.json',
+    'data/anatomy_quiz_part2.json',
+    'data/anatomy_quiz_part3.json',
+    'data/anatomy_quiz_part4.json'
 ];
 
 console.log("📄 Starting quiz load for multiple subjects:", jsonPaths);
